# Car_Robotics

./: .gitmodules  controlador_base.py  read_motors_2.py  rotate_robot.py  servo_test.py
Camera/: camera_test.py  detect_object.py
Motor/: angular_speed.py  car_controller.py  motor_config.py  read_motor.py
ros2_ws/install/: setup.sh
ros2_ws/install/camera_interfaces/share/camera_interfaces/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/camera_pkg/share/camera_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/controlador_base/lib/controlador_base/: controlador_base
ros2_ws/install/controlador_base/share/controlador_base/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/controlador_servo/share/controlador_servo/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/drivers/lib/drivers/: lidar_calibracao  lidar_diagnostico  lidar_node  localizacao_angular
ros2_ws/src/camera_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/camera_interfaces/srv/: DetectaObjeto.srv
ros2_ws/src/camera_pkg/: setup.py
ros2_ws/src/camera_pkg/camera_pkg/: camera_service.py
ros2_ws/src/controlador_base/: setup.cfg  setup.py
ros2_ws/src/controlador_servo/: CMakeLists.txt  package.xml
ros2_ws/src/controlador_servo/controlador_servo/: controlador_servo_node.py
ros2_ws/src/drivers/: package.xml  setup.cfg  setup.py
ros2_ws/src/maze/: package.xml  setup.py
ros2_ws/src/maze/config/: navegador_params.yaml
ros2_ws/src/maze/launch/: desafio_final.launch.py
ros2_ws/src/maze/maze/: navegador_node.py  vfh.py
ros2_ws/src/servo_interfaces/: CMakeLists.txt  package.xml
(+95 files in other folders)
