<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maze</name>
  <version>0.0.0</version>
  <description>Navegação autônoma com VFH para o desafio final</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>servo_interfaces</depend>
  <depend>camera_interfaces</depend>

  <exec_depend>controlador_base</exec_depend>
  <exec_depend>controlador_servo</exec_depend>
  <exec_depend>camera_pkg</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
